fixed overflowing

--- a/MOD3-Solution/css/Proj-3.css
+++ b/MOD3-Solution/css/Proj-3.css
@@ -48,6 +48,7 @@ body{
     position: relative;
     left:0%;
     float: left;
+    overflow: hidden;
 }
 
 .Food_Title{
